adding new csvs and section 1

--- a/ETL_Mini_Project_Crystal_Butler.ipynb
+++ b/ETL_Mini_Project_Crystal_Butler.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'dtype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\cmbut\\Documents\\Bootcamp Homework\\Project 2\\Crowdfunding_ETL\\ETL_Mini_Project_Crystal_Butler.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/cmbut/Documents/Bootcamp%20Homework/Project%202/Crowdfunding_ETL/ETL_Mini_Project_Crystal_Butler.ipynb#Y101sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m category_ids\u001b[39m.\u001b[39;49mdtype\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'dtype'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -708,6 +727,28 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "#cat_ids = [str(category_ids).replace(\"\",\"cat\") for category_id in category_ids]\n",
+    "\n",
+    "\n",
+    "def prepend(list, str):\n",
+    " \n",
+    "    # Using format()\n",
+    "    str += '{0}'\n",
+    "    list = [str.format(i) for i in list]\n",
+    "    return(list)\n",
+    " \n",
+    " \n",
+    "list = category_ids\n",
+    "str = 'cat'\n",
+    "cat_ids = (prepend(list, str))\n",
+    "\n",
+    "list = subcategory_ids\n",
+    "str = 'subcat'\n",
+    "scat_ids = (prepend(list, str))\n",
+    "\n",
+    "cat_ids = [cat_id for cat_id in cat_ids]\n",
+    "scat_ids = [scat_id for scat_id in scat_ids]\n",
+    "\n",
     "\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
     "\n",
@@ -718,12 +759,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.ndarray' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\cmbut\\Documents\\Bootcamp Homework\\Project 2\\Crowdfunding_ETL\\ETL_Mini_Project_Crystal_Butler.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cmbut/Documents/Bootcamp%20Homework/Project%202/Crowdfunding_ETL/ETL_Mini_Project_Crystal_Butler.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/cmbut/Documents/Bootcamp%20Homework/Project%202/Crowdfunding_ETL/ETL_Mini_Project_Crystal_Butler.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m categories \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(categories)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cmbut/Documents/Bootcamp%20Homework/Project%202/Crowdfunding_ETL/ETL_Mini_Project_Crystal_Butler.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m cat_ids \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(cat_ids)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cmbut/Documents/Bootcamp%20Homework/Project%202/Crowdfunding_ETL/ETL_Mini_Project_Crystal_Butler.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m category_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame({\u001b[39m'\u001b[39m\u001b[39mcategory_id\u001b[39m\u001b[39m'\u001b[39m: cat_ids,\u001b[39m'\u001b[39m\u001b[39mcategory\u001b[39m\u001b[39m'\u001b[39m: categories})\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "categories = list(categories)\n",
+    "cat_ids = list(cat_ids)\n",
+    "category_df = pd.DataFrame({'category_id': cat_ids,'category': categories})\n",
     "\n",
+    "\n",
+    "category_df \n",
     "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
    ]
   },
